--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,7 @@ body{
 }
 #contacts div{
   margin-bottom: 20px;
+  text-align: center;
 }
 #contacts i{
   cursor: pointer;
@@ -347,6 +348,7 @@ a{
   #socialmedia-icons{
     padding: 20px;
     font-size: 30px;
+    text-align: center;
   }
   #socialmedia-icons a:hover i{
     color:rgb(247, 111, 0);
@@ -426,6 +428,13 @@ a{
   .awssld__bullets{
     display: flex !important;
   }
+  .portfolio-container{
+    width: 100%;
+  }
+  .portfolio-item{
+    width: 250px;
+    height: 170px;
+  }
 }
 /* Media for skills section */
 @media screen and (max-width:1500px){
@@ -476,6 +485,14 @@ a{
     width: 110px;
     height: 110px;
     font-size: 13px;
+  }
+}
+@media screen and (max-height: 440px){
+  #contacts, #socialmedia-icons{
+    font-size: 20px;
+  }
+  #sidebar{
+    justify-content: center;
   }
 }
 
