--- a/src/App.css
+++ b/src/App.css
@@ -165,7 +165,9 @@ a{
   }
 
   #main{
-    background: url('./img/main.jpg') no-repeat center center /cover;
+    /* background: url('./img/main.jpg') no-repeat center center /cover; */
+    background: rgb(0,0,0);
+    background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(1,156,187,1) 100%);
     color: #fff;
     justify-content: flex-start;
     padding: 10%;
@@ -181,7 +183,8 @@ a{
     font-size: 20px;
   }
   #skills{
-    background: url('./img/skills.jpg') no-repeat center center /cover;
+    background: rgb(0,0,0);
+    background: linear-gradient(0deg, rgba(0,0,0,1) 4%, rgba(49,1,61,1) 50%, rgba(0,0,0,1) 97%);
     overflow-y: scroll;
   }
   #skills>div:first-child{
@@ -288,7 +291,8 @@ a{
     background-color: transparent;
     overflow-y: scroll;
     position: relative;
-    background: url('img/projects-bg.jpg') no-repeat center center /cover;
+    background: rgb(255,211,78);
+    background: linear-gradient(0deg, rgba(255,211,78,1) 3%, rgba(223,166,0,1) 65%); 
   }
   #portfolio>div:first-child{
     width: 100%;
@@ -296,6 +300,7 @@ a{
     display: grid;
     grid-template-columns: 1fr;
     justify-items: center;
+    align-items: start;
   }
   .portfolio-container{
     display: grid;
