--- a/src/App.css
+++ b/src/App.css
@@ -291,8 +291,22 @@ a{
     background-color: transparent;
     overflow-y: scroll;
     position: relative;
-    background: rgb(255,211,78);
-    background: linear-gradient(0deg, rgba(255,211,78,1) 3%, rgba(223,166,0,1) 65%); 
+    /* background: rgb(255,211,78);
+    background: linear-gradient(0deg, rgba(255,211,78,1) 3%, rgba(223,166,0,1) 65%); */
+    background: linear-gradient(-45deg, rgba(255,211,78,1) 3%, rgba(223,166,0,1) 65%, rgb(247, 161, 0) 100%);
+    animation: gradientBG 8s ease infinite;
+    background-size: 300% 300%;
+  }
+  @keyframes gradientBG {
+    0% {
+      background-position: 0% 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0% 50%;
+    }
   }
   #portfolio>div:first-child{
     width: 100%;
@@ -497,7 +511,7 @@ a{
     font-size: 20px;
   }
   #sidebar{
-    justify-content: center;
+    justify-content: stretch;
   }
 }
 
