--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@ body{
     display: flex;
 }
 #sidebar{
-    min-height: 100vh;
+    height: 100vh;
     width: 70px;
     background-color: rgb(14, 15, 44);
     border-right: 2px solid rgb(247, 111, 0);
@@ -53,7 +53,7 @@ body{
   font-weight: 400;
 }
 #main-carousel{
-    min-height: 100vh;
+    height: 100vh;
     width: calc(100vw - 70px);
     position: absolute;
     top: 0px;
