--- a/src/App.css
+++ b/src/App.css
@@ -313,7 +313,7 @@ a{
     display: grid;
     grid-template-columns: 1fr;
     justify-items: center;
-    align-items: start;
+    align-content: start;
   }
   .portfolio-container{
     display: grid;
@@ -323,6 +323,30 @@ a{
     width: 80%;
     align-content: center;
     justify-items: center;
+    margin-top: 40px;
+  }
+  .portfolio-buttons{
+    margin-top: 40px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  .portfolio-buttons button{
+    width: 90px;
+    padding: 8px;
+    background-color: rgb(134, 134, 134);
+    margin: 10px;
+    border-radius: 8px;
+    cursor: pointer;
+    box-shadow: 10px 10px 30px #000;
+  }
+  .portfolio-buttons button:hover{
+    background-color: #000;
+    color: #fff;
+  }
+  .portfolio-buttons button.active{
+    background-color: #000;
+    color: #fff;
   }
   .portfolio-item{
     position: relative;
