--- a/src/App.css
+++ b/src/App.css
@@ -9,13 +9,12 @@
 
 body{
   overflow: hidden;
-    background-color: rgb(14, 15, 44);
+  background-color: rgb(14, 15, 44);
 }
 #root{
     display: flex;
 }
 #sidebar{
-    /* height: 100vh; */
     width: 70px;
     background-color: rgb(14, 15, 44);
     border-right: 2px solid rgb(247, 111, 0);
@@ -111,7 +110,6 @@ a{
       position: absolute;
       top: 0;
       right: 2px;
-      /* height: 100vh; */
       width: 100%;
       display: flex;
       align-content: center;
@@ -226,12 +224,9 @@ a{
     width: 100%;
   }
   .about-me p{
-    /* background: rgb(0,0,0);
-    background: radial-gradient(circle, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 0%, saddlebrown 0%, rgba(0,0,0,1) 100%, rgba(255,255,255,1) 100%); */
-    background: saddlebrown;
+    background: rgba(139,69,19, 0.9);
     border-radius: 20px;
-    border: 3px double rgb(247, 111, 0);
-    width: 70%;
+    width: 85%;
     min-width: 250px;
     padding: 15px;
     box-shadow: 10px 10px 40px #000;
@@ -344,7 +339,7 @@ a{
   .portfolio-buttons button{
     width: 90px;
     padding: 8px;
-    background-color: rgb(134, 134, 134);
+    background-color: rgb(233, 216, 184);
     margin: 10px;
     border-radius: 8px;
     cursor: pointer;
@@ -406,7 +401,10 @@ a{
     width: 100%;
   }
   .project-link:hover{
-    background-color: rgb(134, 134, 134);
+    background-color: rgb(233, 216, 184);
+  }
+  .project-link:hover a{
+    color: #000;
   }
   #socialmedia-icons{
     padding: 20px;
@@ -546,8 +544,7 @@ a{
     font-size: 15px;
   }
   .photo{
-    width: 120px;
-    height: 120px;
+    display: none;
   }
   .skills-list-items p{
     width: 110px;
