--- a/src/App.css
+++ b/src/App.css
@@ -161,13 +161,26 @@ a{
   }
 
   #main{
-    background: rgb(19, 143, 168);
     background: url('./img/bg1.svg') no-repeat center right /cover;
     color: #fff;
     justify-content: flex-start;
-    padding: 10%;
     text-shadow: 10px 10px 50px rgb(14, 15, 44);
     position: relative;
+  }
+  #main>div:first-child{
+    height: 100%;
+    width: 100%;
+    display: flex;
+  }
+  .main-particles{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+  }
+  #main .heading{
+    margin: auto 10% ;
   }
   #main h1{
     font-size: 60px;
@@ -178,6 +191,11 @@ a{
   #main p span{
     display: inline-block;
   }
+  #main>div:first-child{
+    width: 100%;
+    height: 100%;
+  }
+
   #skills{
     background: #faf0be;
     overflow-y: auto;
